@@ -1,13 +1,13 @@
 ## Process this file with automake to produce Makefile.in
 
 # Subdirectories to scan
-SUBDIRS = . docs intl macros man po src tests
+SUBDIRS = . build docs intl macros man po src tests
 
 # Script to install
 bin_SCRIPTS = tifiles-config
 
 # Extra files to add to the (distributed) package
-EXTRA_DIST = LOGO build docs
+EXTRA_DIST = LOGO
 
 pkgconfigdir = $(libdir)/pkgconfig
 if OS_BSD
