@@ -1,4 +1,3 @@
-/* Hey EMACS -*- linux-c -*- */
 /* $Id$ */
 
 /*  libtifiles - Ti File Format library, a part of the TiLP project
@@ -22,6 +21,11 @@
 /*
   TI File Format handling routines
   Calcs: 73/82/83/83+/85/86
+*/
+
+/*
+  Thanks to Adrian Mettler <amettler@hmc.edu> for his patch which fixes
+  some TI85/86 file issues (padded, not padded).
 */
 
 #include <stdio.h>
@@ -198,6 +202,8 @@ TIEXPORT int TICALL ti8x_read_regular_file(const char *filename,
   int i;
   int ti83p_flag = 0;
   uint8_t name_length = 8;	// ti85/86 only
+  uint16_t data_size;
+  uint8_t test_space;
   char signature[9];
 
   if (!tifiles_is_a_ti_file(filename))
@@ -217,18 +223,44 @@ TIEXPORT int TICALL ti8x_read_regular_file(const char *filename,
     return ERR_INVALID_FILE;
   fskip(f, 3);
   fread_n_chars(f, 42, content->comment);
-  fread_word(f, NULL);
+  fread_word(f, &data_size);
 
   // search for the number of entries by parsing the whole file
   offset = ftell(f);
   for (i = 0;; i++) {
+    int current_offset = (int)ftell(f);
+    /* We are done finding entries once we reach the end of the data segment
+     * as defined in the header.  This works better than magic numbers, as
+     * as there exist files in the wild with incorrect magic numbers that
+     * transmit correctly with TI's software and with this code.
+     *   Adrian Mettler
+     */
+    //printf("current_offset: %x, offset + data_size: %x\n",
+    //    current_offset, (uint16_t) offset + data_size);
+	  if (current_offset >= offset + data_size)
+	    break;
+
     fread_word(f, &tmp);
     if (tmp == 0x0D)
       ti83p_flag = !0;		// true TI83+ file (2 extra bytes)
-    if ((tmp != 0x0B) && (tmp != 0x0C) && (tmp != 0x0D))
-      break;
-    if (is_ti8586(content->calc_type))
-      fskip(f, 12);
+    //if ((tmp != 0x0B) && (tmp != 0x0C) && (tmp != 0x0D))
+    //break;
+    if (is_ti8586(content->calc_type)) {
+      /* name may follow one of three conventions: padded with zeroes
+       * (most correct, generated by TI's software), padded with null bytes,
+       * or unpadded.  TI's software accepts all three, so we should too.
+       */
+       fskip(f, 3);
+       fread_byte(f, &name_length);
+       fskip(f, name_length);
+       
+       fread_byte(f, &test_space);
+       fskip (f, -1);
+       
+       //printf("test_space: %x at %x\n", test_space, (int)ftell(f));
+       if (test_space == '\0' || test_space == ' ')  // skip padding if padded
+	 fskip(f, 8 - name_length);
+    }
     else if (content->calc_type == CALC_TI83P)
       fskip(f, 13);
     else
@@ -257,8 +289,14 @@ TIEXPORT int TICALL ti8x_read_regular_file(const char *filename,
     fread_n_chars(f, name_length, entry->name);
     tixx_translate_varname(entry->name, entry->trans,
 			   entry->type, content->calc_type);
-    if (is_ti8586(content->calc_type))
-      fskip(f, 8 - name_length);
+    if (is_ti8586(content->calc_type)) {
+      /* Again, compatibility with padded and unpadded files */
+      fread_byte(f, &test_space);
+      fskip (f, -1);
+      
+      if (test_space == '\0' || test_space == ' ')  // skip padding if padded
+	fskip(f, 8 - name_length);
+    }
     if (ti83p_flag) {
       entry->attr = (fgetc(f) == 0x80 ? ATTRB_ARCHIVED : ATTRB_NONE);
       fgetc(f);
